argocd/apps/argocd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    app.kubernetes.io/name: argocd
    app.kubernetes.io/component: cd
    gateway.networking.k8s.io/allowed: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
