argocd/apps/argocd/grpcroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/component: grpc-route
spec:
  hostnames:
    - argocd.civilsnut.se
  parentRefs:
    - name: shared-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
