argocd/apps/argocd/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
    - argocd.civilsnut.se
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
